# egui_widgets

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
egui_tracing/: Cargo.toml
egui_tracing/examples/: example.rs
egui_tracing/src/: layer.rs  lib.rs  widget.rs
examples/: list_edit.rs  list_editor.rs  list_view.rs  list_viewer.rs  option_value.rs  select_edit.rs  select_editor.rs  tracing.rs
src/: lib.rs  option_value.rs  select_edit.rs  select_editor.rs
src/list_edit/: container.rs  item.rs  mod.rs
src/list_editor/: container.rs  item.rs  mod.rs
src/list_view/: item.rs  mod.rs
src/list_viewer/: item.rs  mod.rs
