[package]
name = "egui_widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["egui_tracing"]

[workspace.dependencies]
egui = { version = "0.22", default-features = false }


[features]
default = ["option_value", "list_viewer"]

option_value = []
list_viewer = []
list_editor = ["dep:serde"]
tracing = ["dep:egui_tracing"]


[dependencies]
egui = { workspace = true }
egui_tracing = { path = "egui_tracing", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
