[package]
name = "egui_tracing"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5.6"
egui = { workspace = true }
parking_lot = { workspace = true }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "registry",
] }
